UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Attribute_Based_SNE__c/ftr_Attribute_Based_SNE__c.object-meta.xml
<CustomObject>
    <label>ftr Attribute Based SNE</label>
    <nameField>
        <label>ftr Attribute Based SNE Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ftr Attribute Based SNEs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>