UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Attribute_Based_SNE__c/fields/CoS__c.field-meta.xml
<CustomField>
    <fullName>CoS__c</fullName>
    <label>CoS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>