UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Attribute_Based_SNE__c/fields/ftr_EVC_Speed__c.field-meta.xml
<CustomField>
    <fullName>ftr_EVC_Speed__c</fullName>
    <label>ftr_EVC_Speed</label>
    <length>50</length>
    <type>Text</type>
</CustomField>