UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Attribute_Based_SNE__c/fields/ftr_Firewall_Model__c.field-meta.xml
<CustomField>
    <fullName>ftr_Firewall_Model__c</fullName>
    <label>ftr_Firewall_Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>