UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Attribute_Based_SNE__c/fields/ftr_Install_Kit_Type__c.field-meta.xml
<CustomField>
    <fullName>ftr_Install_Kit_Type__c</fullName>
    <label>ftr_Install_Kit_Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>