UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Attribute_Based_SNE__c/fields/ftr_LD_MinuteBlocks__c.field-meta.xml
<CustomField>
    <fullName>ftr_LD_MinuteBlocks__c</fullName>
    <label>ftr_LD_MinuteBlocks</label>
    <length>50</length>
    <type>Text</type>
</CustomField>