UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Attribute_Based_SNE__c/fields/ftr_Multi_Location__c.field-meta.xml
<CustomField>
    <fullName>ftr_Multi_Location__c</fullName>
    <label>ftr_Multi_Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>