UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Attribute_Based_SNE__c/fields/ftr_Partnered__c.field-meta.xml
<CustomField>
    <fullName>ftr_Partnered__c</fullName>
    <label>ftr_Partnered</label>
    <length>100</length>
    <type>Text</type>
</CustomField>