UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Attribute_Based_SNE__c/fields/ftr_rck_mt__c.field-meta.xml
<CustomField>
    <fullName>ftr_rck_mt__c</fullName>
    <label>ftr_rck_mt</label>
    <length>100</length>
    <type>Text</type>
</CustomField>