UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Attribute_Based_SNE__c/fields/High_Availability__c.field-meta.xml
<CustomField>
    <fullName>High_Availability__c</fullName>
    <label>High Availability</label>
    <length>3</length>
    <type>Text</type>
</CustomField>