UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Attribute_Based_SNE__c/fields/IKEv2_VPN__c.field-meta.xml
<CustomField>
    <fullName>IKEv2_VPN__c</fullName>
    <label>IKEv2_VPN</label>
    <length>3</length>
    <type>Text</type>
</CustomField>