UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Attribute_Based_SNE__c/fields/IP_Blocks__c.field-meta.xml
<CustomField>
    <fullName>IP_Blocks__c</fullName>
    <label>IP Blocks</label>
    <length>50</length>
    <type>Text</type>
</CustomField>