UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Attribute_Based_SNE__c/fields/MinuteBlocks__c.field-meta.xml
<CustomField>
    <fullName>MinuteBlocks__c</fullName>
    <label>MinuteBlocks</label>
    <length>50</length>
    <type>Text</type>
</CustomField>