UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Attribute_Based_SNE__c/fields/NBD_Remote_Maint_Product__c.field-meta.xml
<CustomField>
    <fullName>NBD_Remote_Maint_Product__c</fullName>
    <label>NBD Remote Maint Product</label>
    <length>50</length>
    <type>Text</type>
</CustomField>