UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Attribute_Based_SNE__c/fields/SDWAN_Speed__c.field-meta.xml
<CustomField>
    <fullName>SDWAN_Speed__c</fullName>
    <label>SDWAN Speed</label>
    <length>25</length>
    <type>Text</type>
</CustomField>