UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Attribute_Based_SNE__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Code__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Speed__c</columns>
    <columns>Term__c</columns>
    <columns>IP_Blocks__c</columns>
    <columns>Jurisdiction__c</columns>
    <columns>SNE_Code_MRC__c</columns>
    <columns>SNE_Code_OTC__c</columns>
    <columns>SNE_Code_Term__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>