UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Attribute_Based_SNE__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Speed__c</columns>
    <columns>Term__c</columns>
    <columns>SNE_Code_Term__c</columns>
    <columns>SNE_Code_OTC__c</columns>
    <columns>SNE_Code_MRC__c</columns>
    <columns>SF_Product_Code__c</columns>
    <columns>CONNECTION_SENT.NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Jurisdiction__c</columns>
    <columns>Part_Number__c</columns>
    <columns>Purchase_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Code__c</field>
        <operation>contains</operation>
        <value>UCF</value>
    </filters>
    <label>All</label>
</ListView>